# reixi

./: README.md  devbox.json  pyproject.toml
reixi/: __init__.py  common.py  db.py  internals.py  reixi.py
reixi/builtins/: reactionroles.py  serverprefixes.py
